# wmm

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: declination.rs
