[package]
authors = ["René Herrero Gómez <rene@sevenseas.io>", "Dhruv Gramopadhye <dgramopadhye@gmail.com>"]
categories = ["no-std", "science"]
description = " WMM no_std library used to calculate the magnetic declination"
documentation = "https://docs.rs/wmm2"
edition = "2021"
keywords = ["magnetic"]
license = "MIT OR Apache-2.0"
name = "wmm2"
readme = "README.md"
repository = "https://github.com/dgramop/wmm"
version = "0.2.3"

[build-dependencies]
cc = "1.0"

[dependencies]
cty = "0.2"
spin = "0.9"
time = { version = "0.3", default-features = false }

[[example]]
name = "declination"
